--- a/Project/src/app/user/auth-modal/auth-modal.component.html
+++ b/Project/src/app/user/auth-modal/auth-modal.component.html
@@ -3,7 +3,7 @@
 
     <!-- Tabs -->
     <app-tabs-container>
-        <app-tab>
+        <app-tab tabTitle="Login">
             <form>
                 <!-- Email -->
                 <div class="mb-3">
@@ -24,7 +24,7 @@
                 </button>
             </form>
         </app-tab>
-        <app-tab>
+        <app-tab tabTitle="Register">
             <form>
                 <!-- Name -->
                 <div class="mb-3">
