--- a/Project/src/app/user/auth-modal/auth-modal.component.html
+++ b/Project/src/app/user/auth-modal/auth-modal.component.html
@@ -3,7 +3,7 @@
 
     <!-- Tabs -->
     <app-tabs-container>
-        <app-tab tabTitle="Login">
+        <app-tab tabTitle="Login" [isActive]="true">
             <form>
                 <!-- Email -->
                 <div class="mb-3">
