--- a/Project/src/app/user/register/register.component.html
+++ b/Project/src/app/user/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
     <!-- Name -->
     <div class="mb-3">
         <label class="inline-block mb-2">Name</label>
@@ -30,7 +30,7 @@
         <app-input [control]="phoneNumber" placeholder="Enter Phone Number" format="(000)000-0000"></app-input>
     </div>
     <button type="submit" class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
-            hover:bg-indigo-500">
+            hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400" [disabled]="registerForm.invalid">
         Submit
     </button>
 </form>
