--- a/Project/src/app/shared/input/input.component.html
+++ b/Project/src/app/shared/input/input.component.html
@@ -26,4 +26,7 @@ duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400" 
         Passwords must be at least 8 characters long,
         have 1 uppercase letter, 1 lowercase letter and 1 number.
     </p>
+    <p *ngIf="control.errors?.noMatch" class="text-red-400">
+        Passwords do not match.
+    </p>
 </ng-container>
