--- a/Project/src/app/nav/nav.component.html
+++ b/Project/src/app/nav/nav.component.html
@@ -19,7 +19,7 @@
                         <a class="px-2" href="#">Upload</a>
                     </li>
                     <li>
-                        <a class="px-2" (click)="logout($event)" href="#">Logout</a>
+                        <a class="px-2" (click)="auth.logout($event)" href="#">Logout</a>
                     </li>
                 </ng-template>
                 <li>
